<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity">

    <ImageView
        android:id="@+id/img_user"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="14dp"
        android:layout_alignParentTop="true"
        android:src="@drawable/user"
        android:layout_marginTop="-13dp"
        android:background="#fff"   />

    <TextView
        android:id="@+id/user_namesiji"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginRight="10dp"
        android:text="@string/user_namesiji"
        android:textColor="#000000"
        android:textSize="14dp"
        app:layout_constraintRight_toLeftOf="@+id/img_user"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="16dp" />

    <ImageView
        android:id="@+id/bks_img"
        android:layout_width="411dp"
        android:layout_height="250dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="36dp"
        android:src="@drawable/bks"
        app:layout_constraintTop_toBottomOf="@+id/user_namesiji"  />

    <TextView
        android:id="@+id/teks_lay1"
        android:layout_width="117dp"
        android:layout_height="44dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="28dp"
        android:text="@string/teks_lay1"
        android:textSize="14dp"
        app:layout_constraintTop_toBottomOf="@+id/bks_img"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/teks_bks"
        android:layout_width="130dp"
        android:layout_height="34dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="76dp"
        android:layout_marginTop="28dp"
        android:gravity="top"
        android:text="@string/Bekasi"
        android:textSize="14dp"
        app:layout_constraintLeft_toRightOf="@+id/teks_lay1"
        app:layout_constraintTop_toBottomOf="@+id/bks_img" />

    <TextView
        android:id="@+id/teks_loc"
        android:layout_width="88dp"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:gravity="top"
        android:textSize="14dp"
        android:text="@string/lokasi"
        app:layout_constraintTop_toBottomOf="@+id/teks_lay1"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/find_map"
        android:layout_width="69dp"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="108dp"
        android:layout_marginTop="48dp"
        android:gravity="top"
        android:text="@string/search_om_map"
        android:textSize="14dp"
        app:layout_constraintLeft_toRightOf="@id/teks_loc"
        app:layout_constraintTop_toBottomOf="@id/teks_bks" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="31dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/lokasi"
        app:layout_constraintLeft_toRightOf="@id/find_map"
        app:layout_constraintTop_toBottomOf="@id/teks_bks" />

    <Button
        android:id="@+id/second_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Lihat Menu"
        app:layout_constraintTop_toBottomOf="@id/teks_loc"
        tools:layout_editor_absoluteX="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>